update domestic conf

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,7 +10,7 @@
     <p style="text-align: left;"> At 2015, I and my collegues participated in DARPA Robotics Challenge Finals 2015 (DRC Finals 2015) as <a href="http://dyros.snu.ac.kr/drc-comp/">Team SNU</a> and I was studnet leader of our team. My main role was to manage whole framework of robot and develop the upper-body and lower-body position controller.</p>
     <p style="text-align: left;"> From 2018 to 2019, I have been a visiting researcher in <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a> (LAAS-CNRS, Toulouse), where I have been working with <a href="http://homepages.laas.fr/nmansard">Nicolas Mansard</a>, <a href="http://stevetonneau.fr">Steve Tonneau</a>, <a href="http://pfernbach.github.io">Pierre Fernbach</a>, and <a href="http://cmastalli.github.io">Carlos Mastalli</a>.</p>
     <p style="text-align: left;"> Main keywords of my reasearches are <strong>Optimal Control</strong>, <strong>Trajectory Optimization</strong>, <strong>Humanoid Robot</strong>, <strong>Mobile Manipulation</strong>, and <strong>Robot Hand Control</strong>. </p>
-    <p style="text-align: left;">In this website, you can find my projects, publications, videos, and source codes. And my Curriculum Vitae (CV) is <a href="/assets/pdf/cv/Sanghyun Kim-cv.pdf"> here</a> (uptated, 24.02.19).  </p></div>
+    <p style="text-align: left;">In this website, you can find my projects, publications, videos, and source codes. And my Curriculum Vitae (CV) is <a href="/assets/pdf/cv/Sanghyun-cv.pdf"> here</a> (uptated, 24.02.19).  </p></div>
   <div class="introduce">
     <p style="text-align: left;"><br /></p>
     <p style="text-align: left;"> <img alt="mountains" src="{{ "/assets/img/38058103.jpeg" | prepend: site.baseurl }}" /></p></div>
