--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
 		<h2><span style="color: #ffffff;">{{ page.title }}</span></h2>
 		<p><strong>{{ page.excerpt }}</strong></p>
 		<!-- <p><strong>{{ page.author }}</strong></p> -->
-		<p><strong><time datetime="{{ page.date | date: "%-d %b %y" }}">{{ page.date | date: "%-d %b %y" }}</time></strong></p>
+		<!-- <p><strong><time datetime="{{ page.date | date: "%-d %b %y" }}">{{ page.date | date: "%-d %b %y" }}</time></strong></p> -->
 
 		<!-- Tags -->
 		<p><strong>Tags:
