--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,12 +5,12 @@
 </div>
 <div class="user">
   <div class="introduce">
-    <p style="text-align: left;">Hello, Everyone.</p>
-    <p style="text-align: left;">I am Sanghyun Kim in <a href="http://dyros.snu.ac.kr">Dyros Lab (Prof. Jaeheung Park)</a> at Seoul National University which is working on control and planning of both humanoid and mobile manipulator.&nbsp;</p>
-    <p style="text-align: left;"> At 2015, I and my collegues participated in DARPA Robotics Challenge Finals 2015 (DRC Finals 2015) as <a href="http://dyros.snu.ac.kr/drc-comp/">Team SNU</a> and I was studnet leader of our team. My main role was to manage whole framework of robot and develop the upper-body and lower-body position controller.</p>
-    <p style="text-align: left;"> From 2018 to 2019, I have been a visiting researcher in <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a> (LAAS-CNRS, Toulouse), where I have been working with <a href="http://homepages.laas.fr/nmansard">Nicolas Mansard</a>, <a href="http://stevetonneau.fr">Steve Tonneau</a>, <a href="http://pfernbach.github.io">Pierre Fernbach</a>, and <a href="http://cmastalli.github.io">Carlos Mastalli</a>.</p>
+    <p style="text-align: left;"> Hello, Everyone.</p>
+    <p style="text-align: left;"> I am Sanghyun Kim in <a href="http://dyros.snu.ac.kr">Dyros Lab (Prof. Jaeheung Park)</a> at Seoul National University which is working on control and planning of both humanoid and mobile manipulator.&nbsp;</p>
+    <p style="text-align: left;"> At 2015,my collegues and I had participated in DARPA Robotics Challenge Finals 2015 (DRC Finals 2015) as <a href="http://dyros.snu.ac.kr/drc-comp/">Team SNU</a> and I was studnet leader of our team. My main role was to manage whole framework of robot and develop the upper-body and lower-body position controller.</p>
+    <p style="text-align: left;"> From 2018 to 2019, I had been a visiting researcher in <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a> (LAAS-CNRS, Toulouse), where I have been working with <a href="http://homepages.laas.fr/nmansard">Nicolas Mansard</a>, <a href="http://stevetonneau.fr">Steve Tonneau</a>, <a href="http://pfernbach.github.io">Pierre Fernbach</a>, and <a href="http://cmastalli.github.io">Carlos Mastalli</a>.</p>
     <p style="text-align: left;"> Main keywords of my reasearches are <strong>Optimal Control</strong>, <strong>Trajectory Optimization</strong>, <strong>Humanoid Robot</strong>, <strong>Mobile Manipulation</strong>, and <strong>Robot Hand Control</strong>. </p>
-    <p style="text-align: left;">In this website, you can find my projects, publications, videos, and source codes. And my Curriculum Vitae (CV) is <a href="/assets/pdf/cv/Sanghyun-cv.pdf"> here</a> (uptated, 19.07.09).  </p></div>
+    <p style="text-align: left;"> In this website, you can find my projects, publications, videos, and source codes. And my Curriculum Vitae (CV) is <a href="/assets/pdf/cv/Sanghyun-cv.pdf"> here</a> (uptated, 19.07.30).  </p></div>
   <div class="introduce">
     <p style="text-align: left;"><br /></p>
     <p style="text-align: left;"> <img alt="mountains" src="{{ "/assets/img/38058103.jpeg" | prepend: site.baseurl }}" /></p></div>
@@ -23,8 +23,9 @@
     </div>
     <p style="text-align: left;"><strong>2005-2012 B.S.<br /></strong> Mechanical and Aerospace Engineering, Seoul National University</p>
     <p style="text-align: left;"><strong>2010-2010 Student Internship <br /></strong> <a href="http://haptics.gist.ac.kr">Human Robotics Lab</a> Gwangju Institute of Science and Technology</p>
+    <p style="text-align: left;"><strong>2018-2019 Visiting Scholar<br /></strong> <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a>, LAAS-CNRS</p>
     <p style="text-align: left;"><strong>2012-Current Ph.D Candidate<br /></strong> <a href="http://dyros.snu.ac.kr">Dyros Lab</a>, Seoul National University</p>
-    <p style="text-align: left;"><strong>2018-Current Visiting Scholar<br /></strong> <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a>, LAAS-CNRS</p></div>
+    </div>
   <div class="tech">
     <div class="home-title">
       <h3>Skills </h3>
@@ -37,7 +38,7 @@
     <div class="home-title">
       <h3>Honors & Awards </h3>
     </div>
-    <p style="text-align: left;"><strong> Finalist of Best Paper Award </strong> in IEEE international confercence on Advanced Robotics and Mechatronics, 2019</p>
+    <p style="text-align: left;"><strong> Best Paper Award </strong> in IEEE international confercence on Advanced Robotics and Mechatronics, 2019</p>
     <p style="text-align: left;"><strong> Scholarship </strong> Full and Half Scholarship for academic excellence at Seoul National University, 2007-2014</p>      
     <p style="text-align: left;"><strong> Cum Laude </strong> from Dept. of Mechanical Engineering at Seoul National University, 2012</p>
     <p style="text-align: left;"><strong> Best Paper Award </strong> in Jounal of Korea Robotics Society, 2018</p>
