update about me

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,10 +6,11 @@
 <div class="user">
   <div class="introduce">
     <p style="text-align: left;"> Hello, Everyone.</p>
-    <p style="text-align: left;"> I am a research associate (postdoctoral researcher) in <a href="http://web.inf.ed.ac.uk/slmc"> SLMC Group (Prof. Sethu Vijayakumar)</a> at the University of Edinburgh (UoE), United Kingdom. </p>
+    <p style="text-align: left;"> I am a senior researcher in Dept. of AI Machinery, System Engineering Research Division, Korea Institute of Machinery & Materials (KIMM), South Korea. </p>
     <p style="text-align: left;"> I received the B.S. degree in mechanical engineering from Seoul National University in 2012 and the Ph.D degree in <a href="http://dyros.snu.ac.kr/">DYROS Lab (Prof. Jaeheung Park) </a> at Seoul National University, Republic of Korea.</p>
     <p style="text-align: left;"> At 2015, my collegues and I had participated in DARPA Robotics Challenge Finals 2015 (DRC Finals 2015) as <a href="http://dyros.snu.ac.kr/drc-comp/">Team SNU</a> and I was studnet leader of our team. My main role was to manage whole framework of robot and develop the upper-body and lower-body position controller.</p>
     <p style="text-align: left;"> From 2018 to 2019, I had been a visiting researcher in <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a> (LAAS-CNRS, Toulouse), where I have been working with <a href="http://homepages.laas.fr/nmansard">Nicolas Mansard</a>, <a href="http://stevetonneau.fr">Steve Tonneau</a>, <a href="http://pfernbach.github.io">Pierre Fernbach</a>, and <a href="http://cmastalli.github.io">Carlos Mastalli</a>.</p>
+    <p style="text-align: left;"> In 2020, I was a research associate of <a href="http://web.inf.ed.ac.uk/slmc"> SLMC Group (Prof. Sethu Vijayakumar)</a> at the University of Edinburgh (UoE), United Kingdom. </p>
     <p style="text-align: left;"> Main keywords of my reasearches are <strong>Optimal Control</strong>, <strong>Trajectory Optimization</strong>, <strong>Humanoid Robot</strong>, <strong>Mobile Manipulation</strong>, and <strong>Robot Hand Control</strong>. </p>
     <p style="text-align: left;"> In this website, you can find my projects, publications, videos, and source codes. And my Curriculum Vitae (CV) is <a href="/assets/pdf/cv/Sanghyun-cv.pdf"> here</a> (uptated, 01.08.20).  </p></div>
   <div class="introduce">
@@ -26,8 +27,10 @@
     <p style="text-align: left;"><strong>2010-2010 Student Internship <br /></strong> <a href="http://haptics.gist.ac.kr">Human Robotics Lab</a> Gwangju Institute of Science and Technology</p>
     <p style="text-align: left;"><strong>2018-2019 Visiting Scholar<br /></strong> <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a>, LAAS-CNRS</p>
     <p style="text-align: left;"><strong>2012-2020 Ph.D <br /></strong> <a href="http://dyros.snu.ac.kr">Dyros Lab</a>, Seoul National University</p>
-    <p style="text-align: left;"><strong>2020-Current Research Associate <br /></strong> <a href="http://web.inf.ed.ac.uk/slmc">SLMC group</a>, University of Edinburgh</p>
-    </div>
+    <p style="text-align: left;"><strong>2020-2020 Research Associate <br /></strong> <a href="http://web.inf.ed.ac.uk/slmc">SLMC group</a>, University of Edinburgh</p>
+    <p style="text-align: left;"><strong>2020-Current Senior Resaercher <br /></strong> Dept. of AI Machinery, Korea Institute of Machinery & Materials</p>
+      
+  </div>
   <div class="tech">
     <div class="home-title">
       <h3>Skills </h3>
