--- a/_includes/about.html
+++ b/_includes/about.html
@@ -28,7 +28,7 @@
     <p style="text-align: left;"><strong>2018-2019 Visiting Scholar<br /></strong> <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a>, LAAS-CNRS</p>
     <p style="text-align: left;"><strong>2012-2020 Ph.D <br /></strong> <a href="http://dyros.snu.ac.kr">Dyros Lab</a>, Seoul National University</p>
     <p style="text-align: left;"><strong>2020-2020 Research Associate <br /></strong> <a href="http://web.inf.ed.ac.uk/slmc">SLMC group</a>, University of Edinburgh</p>
-    <p style="text-align: left;"><strong>2020-Current Senior Resaercher <br /></strong> Dept. of AI Machinery, Korea Institute of Machinery & Materials</p>
+    <p style="text-align: left;"><strong>2020-Current Senior Resaercher <br /></strong> Dept. of AI Machinery, Korea Institute of Machinery & Materials\</p>
       
   </div>
   <div class="tech">
