--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,9 +13,9 @@
     <p style="text-align: left;"> In 2020, I was a research associate of <a href="http://web.inf.ed.ac.uk/slmc"> SLMC Group (Prof. Sethu Vijayakumar)</a> at the University of Edinburgh (UoE), United Kingdom. </p>
     <p style="text-align: left;"> Main keywords of my reasearches are <strong>Optimal Control</strong>, <strong>Trajectory Optimization</strong>, <strong>Humanoid Robot</strong>, <strong>Mobile Manipulation</strong>, and <strong>Robot Hand Control</strong>. </p>
     <p style="text-align: left;"> In this website, you can find my projects, publications, videos, and source codes. And my Curriculum Vitae (CV) is <a href="/assets/pdf/cv/Sanghyun-cv.pdf"> here</a> (uptated, 01.08.20).  </p></div>
-  <div class="introduce">
+  <div class="introduce2">
     <p style="text-align: left;"><br /></p>
-    <p style="text-align: left;"> <img alt="mountains" src="{{ "/assets/img/38058103.jpeg" | prepend: site.baseurl }}" /></p></div>
+    <p style="text-align: left;"> <img alt="my_photo" src="{{ "/assets/img/38058103.jpeg" | prepend: site.baseurl }}" /></p></div>
 </div>
 
 <div class="user">
